Add Mapquest Open Aerial map source

Seems after the demise of OAM, this is the only usable and open service
of aerial tiles.

https://bugzilla.gnome.org/show_bug.cgi?id=697304